# ax_learning_crew_workbook

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
.claude/: settings.json
.claude/commands/: memory-reset.md  memory.md  scenario.md
.claude/scripts/: archive_prompt.sh
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: main.py
apps/api/app/agent/: block_stream_parser.py  runner.py  system_prompt.py  tools_registry.py
apps/api/app/agent/prompts/: __init__.py
apps/api/app/api/routes/: agent.py  feedback.py  users.py
apps/api/app/core/: config.py  db.py  llm_client.py
apps/api/app/models/: block_models.py  request_models.py
apps/api/app/repositories/: _db.py  chat_messages.py  chat_sessions.py  feedback.py  users.py
apps/api/app/services/feedback/: feedback_service.py
apps/api/app/services/memory/: memory_service.py
apps/api/app/services/ranking/: rerank_service.py
apps/api/app/services/retrieval/: search_service.py
apps/api/app/tools/: clarify.py  evaluate.py  landmark.py  memory.py  memory_update.py  search.py  search_menus.py  travel.py  weather.py
apps/web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
data/processed/: enriched_blogs_20260419.jsonl  enriched_google_20260419.jsonl  enriched_naver_20260419.jsonl  filtered_20260419.jsonl  menus_20260419.jsonl  restaurants_20260419.jsonl  summarized_20260419.jsonl
data/raw/: google_20260419.jsonl
data/scripts/: 1_fetch_google.py  1_fetch_kakao.py  2_filter.py  3_enrich_naver.py  4_enrich_google_details.py  (+5 more)
(+45 files in other folders)
